docs(jvm): 更新第4章工具和第5章调优文档，新增面试题汇总
- 完善 chapter-04-tools.md，添加Arthas详细章节
- 完善 chapter-05-tuning.md，添加8个调优案例和Eclipse实战
- 新增 chapter-04-interview.md，包含40道JVM工具面试题
- 新增 chapter-05-interview.md，包含22道JVM调优面试题